Theme/theme.css
          html, body { height: 100%; }
select,
textarea,
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"],
.uneditable-input {
	margin-bottom:2px;
}
          #wrap {
            min-height: 100%;
            height: auto !important;
            height: 100%;
            /* Negative indent footer by it's height */
            margin: 0 auto -40px;
          }

 #push,
#footer {
height: 30px;
}

#footer {
background-color: #f5f5f5;

text-align: center;
font-size: 13px;
font-weight: bold;

padding-top:10px;
}

#footer a {
color: #77b4d9;
text-decoration: none;
}
.alert-block{
  background-color: #EABBA5;
  opacity:1;
  border-radius: 10px;
  padding:10px;

}


.float-right
{
    float: right;
}

.float-center
{
    float: center;
}

.float-left
{
    float: left;
}
.container {
padding-right: 15px;
padding-left: 15px;
margin-right: 0px;
margin-left: 0px;
}

